--- a/fj21-agenda/WebContent/adiciona-contato.html
+++ b/fj21-agenda/WebContent/adiciona-contato.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-	<form action="adicionaContato">
+	<form action="adicionaContato" method="post">
 		Nome: <input type="text" name="nome"/><br />
 		E-mail: <input type="text" name="email"/><br />
 		Endereco: <input type="text" name="endereco"/><br />
